@@ -1,3 +1,6 @@
+2011-07-26
+* add mergeBlacklist method to merge sections in blacklists that overlap.
+
 2011-07-25
 * fix copyright statements
 * remove more duplicate code from bruteforce.py
